--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,7 @@
 html {
   background-color: black;
   color: #fff;
+  font-family: 'IBM Plex Serif', serif;
 }
 
 .title {
@@ -44,6 +45,10 @@ html {
   background-color: #00BFFF;
 }
 
+.generate-button:focus {
+  outline: none;
+}
+
 .line-across {
   margin-top: 20px;
   color: white;
@@ -85,6 +90,10 @@ html {
   background-color: #00BFFF;
 }
 
+.save-button:focus {
+  outline: none;
+}
+
 .new-project {
   font-size: 2em;
 }
@@ -107,6 +116,10 @@ html {
 
 .save-project-button:hover {
   background-color: #00BFFF;
+}
+
+.save-project-button:focus {
+  outline: none;
 }
 
 .unlocked {
