get and display palettes

--- a/public/styles.css
+++ b/public/styles.css
@@ -65,7 +65,7 @@ html {
   font-size: 1em;
 }
 
-.project-files {
+.post-project {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
